--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
         <head>
           <title >know about pauline. </title>
-          <h1 id ="myhead"> KNOW ALL ABOUT ME IN 10MINUTES.</h1>
+          <h1 id ="myhead">  PAULINE MBABU</h1>
         <link rel="stylesheet" href="css/styles.css">
           <img src="photo1.jpg" alt="pauline mbabu" style="width:800px;height:400px;">
         </head>
         <body>
-           <div class = "one">
+           <div row  = "one">
           <h2 id = "myheader" >welcome to my home page!!!!!!</h2>
           <p> my name is Pauline mbabu, ever since i was young i was always a very inquisitive person and i guess that has
             helped shape who i am today. With time and growth i have to love technology and have always played an active role
@@ -15,13 +15,14 @@
           </div>
           <br>
             <ul>
-    <li>      <a href ="aboutme.html">ABOUT ME </a> </li>
+              <div row ="rowone">
+     <button type="submit " > <a href ="aboutme.html">ABOUT ME </a> </li></button >
 
 
-    <li>    <a href ="contacts.html">CONTACTS </a> </li>
+    <button type ="submit">  <a href ="contacts.html">CONTACTS </a> </button>
+
+</div>
 
 
-
-        </ul>
         </body>
       </html>
