--- a/aboutme.html
+++ b/aboutme.html
@@ -56,11 +56,11 @@
           <br>
           <br>
           <br>
-            <ul>
-             <li>  <a href ="index.html">HOME </a> </li>
+
+             <button type ="submit"> <a href ="index.html">HOME </a> </button>
 
 
-             <li>  <a href ="contacts.html">CONTACTS </a> </li>
+             <button type="submit">  <a href ="contacts.html">CONTACTS </a> </button>
 
 
 
