--- a/contacts.html
+++ b/contacts.html
@@ -7,10 +7,17 @@
         <body>
           <div class ="one">
           <p > You can reach me with one of the following,</p><br>.
-      
+
             <ul>
               <li>+25472804896</li>
     <li>  twitter : @m_mbabu</li>
       </div>
+
+
+
+      <button type="submit " > <a href ="aboutme.html">ABOUT ME </a> </li></button >
+
+
+     <button type ="submit">  <a href ="index.html">HOME </a> </button>
         </body>
       </html>
