--- a/aboutme.html
+++ b/aboutme.html
@@ -61,9 +61,9 @@
 
 
              <button type="submit">  <a href ="contacts.html">CONTACTS </a> </button>
+            <div name ="empty"> <p></p></div>
 
 
-
-        </ul>
+        
         </body>
       </html>
