--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <button type ="submit">  <a href ="contacts.html">CONTACTS </a> </button>
 
 </div>
-
+<div name ="empty"> <p></p></div>
 
         </body>
       </html>
