--- a/contacts.html
+++ b/contacts.html
@@ -2,24 +2,17 @@
         <head>
           <title >know about pauline. </title>
           <h1 id ="myhead"> MY CONTACTS </h1>
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="css/contact.css">
           </head>
         <body>
-          <div class ="one">
+          <div class ="row">
           <p > You can reach me with one of the following,</p><br>.
 
             <ul>
               <li>+25472804896</li>
-    <li>  twitter : @m_mbabu</li>
+              
+             <li>  twitter : @m_mbabu</li>
       </div>
 
-      <div class="empty">
-
-      </div>
-
-      <button type="submit " > <a href ="aboutme.html">ABOUT ME </a> </li></button >
-
-
-     <button type ="submit">  <a href ="index.html">HOME </a> </button>
         </body>
       </html>
