--- a/index.html
+++ b/index.html
@@ -1,28 +1,76 @@
-<html>
+ <!DOCTYPE html>
+      <html>
         <head>
-          <title >know about pauline. </title>
-          <h1 id ="myhead">  PAULINE MBABU</h1>
-        <link rel="stylesheet" href="css/styles.css">
-          <img src="photo1.jpg" alt="pauline mbabu" style="width:800px;height:400px;">
+          <meta charset="utf-8">
+
+         <meta name="viewport" content="width=device-width, initial-scale=1">
+           <link href="css/bootstrap.min.css" rel="stylesheet">
+           <link rel="stylesheet" href="css/styles.css">
+
+          <title>  Pauline Mbabu </title>
+
         </head>
         <body>
-           <div row  = "one">
-          <h2 id = "myheader" >welcome to my home page!!!!!!</h2>
-          <p> my name is Pauline mbabu, ever since i was young i was always a very inquisitive person and i guess that has
-            helped shape who i am today. With time and growth i have to love technology and have always played an active role
-            in things to do with women in tech.<br>
-            on my ABOUT ME page you will get to know alot about me. <br>
-          </div>
-          <br>
-            <ul>
-              <div row ="rowone">
-     <button type="submit " > <a href ="aboutme.html">ABOUT ME </a> </li></button >
+          
+<div class = "container container-fluid">
+<h1 id =head> Pauline Mbabu</h1>
+          <nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-WDM-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+         <span class="icon-bar"></span>
+         <span class="icon-bar"></span>
+         <span class="icon-bar"></span>
+        </button>
+      </div>
 
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-WDM-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="aboutme.html">ABOUT ME <span class="sr-only">(current)</span></a></li>
+          <li>
+           <li class="active"><a href="contacts.html">CONTACT ME  <span class="sr-only">(current)</span></a></li>
+          </li>
+          </ul>
 
-    <button type ="submit">  <a href ="contacts.html">CONTACTS </a> </button>
-
+        <ul class="nav navbar-nav navbar-right">
+            <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> OTHER PAGES <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="aboutme.html"> ABOUT ME</a></li>
+              <li><a href="contact.html"> CONTACT ME</a></li>
+              <li><a href="README.md"> READ  ME</a></li>
+          
+            </ul>
+          </li>
+        </ul>
+      </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+  </nav>
+  <div class="jumbotron">
+<!--  create jumbotron -->
+<div class =" container">
+  <div class="row">
+  <div class =" col-sm-6 col-md-6">
+    <div class="thumbnail">
+<img src="img/photo1.jpg" alt="used">
+<h2>Live Laugh and Enjoy</h2>
+<p> Be commited to what you do and give it your all like your life depends on it. </p>
 </div>
-<div name ="empty"> <p></p></div>
+</div>
+<div class =" col-sm-6 col-md-6">
+  <h3 class ="intro"> Introduction</h3>
+  <p id ="para1">There is so much that can be said about a person but one word to describe that person and i guess that word for me is sophesticated. i love what i love and what i love i do it with a passion. i love technology, i love fashion , i love travel, i love coding, i love success . This is just who i am and  i have grow to like it more each day.</p>
+</div>
+</div>
+</div>
+</div>
+
+    <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
+    <script type="text/javascript" src = "js/bootstrap.min.js"> </script>
+    <script type="text/javascript" src="js/script.js"></script>
 
         </body>
       </html>
